# news-intelligence-platform

./: .env.example  .env.prod.example  .gitignore  Caddyfile  DEPLOY.md  Makefile  PLAN.md  RAILWAY.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: brief.py  entities.py  feeds.py  health.py  ingestion.py  insights.py  lookup.py  network.py  predictions.py  search.py  source_intel.py  sources.py  stories.py  threads.py  topics.py  trends.py
backend/app/core/: config.py  database.py  logging.py
backend/app/ml/: embeddings.py  ner.py  sentiment.py  topics.py
backend/app/models/: __init__.py  article.py  episode.py  ops.py  source.py  story.py  taxonomy.py  thread.py
backend/app/schemas/: common.py  entity.py  ingestion.py  intelligence.py  source.py  story.py  topic.py
backend/app/seed/: indian_states.py  run_seed.py  sources.py
backend/app/services/: anomalies.py  article_repo.py  clustering.py  cooccurrence.py  coverage.py  enrichment.py  ingestion.py  predictions.py  rss_fetcher.py  scheduler.py  story_builder.py  text_utils.py  threads.py  url_canonical.py
backend/flows/: build_stories.py  cluster.py  enrich.py  ingest.py  intelligence.py  serve.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 4aabd63caf0e_initial_schema.py
backend/scripts/: start-prod.sh
backend/tests/: test_health.py
extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
frontend/: package.json  (+1 more)
(+53 files in other folders)
