[project]
name = "nip-backend"
version = "0.1.0"
description = "News Intelligence Platform backend"
requires-python = ">=3.10"
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # db
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    # config / validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # http / parsing
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.10",
    "tldextract>=5.1",
    "python-dateutil>=2.9",
    # infra clients
    "redis>=5.0",
    "minio>=7.2",
    "prefect>=3.0",
    # nlp / ml
    "sentence-transformers>=3.0",
    "spacy>=3.7",
    "keybert>=0.8",
    "sumy>=0.11",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "networkx>=3.3",
    "vadersentiment>=3.3.2",
    # logging
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "flows*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
